# Logger

./: .todo  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build-linux.yml  build-windows.yml  cmake-multi-platform.yml  cmake-single-platform.yml  release.yml
config/: loggerConfig.cmake.in
examples/: CMakeLists.txt  console_sink_example.cpp  console_sink_test.cpp  fstream_sink_example.cpp  fstream_sink_test.cpp  ostream_sink_example.cpp  ostream_sink_test.cpp  terminal_sink_test.cpp  timer_test.cpp
include/logger/: base_sink.h  console.h  console_sink.h  fstream_sink.h  logger.h  ostream_sink.h  terminal.h  terminal_sink.h  timer.h
src/: logger.cpp  logger.h  terminal.cpp  timer.cpp
src/console/: console.h  console_libx11.cpp  console_win32.cpp
src/sinks/: base_sink.h  console_sink.cpp  fstream_sink.cpp  ostream_sink.cpp  ostream_sink.h  terminal_sink.cpp  terminal_sink.h
src/terminal/: terminal_libx11.cpp  terminal_win32.cpp
test/: CMakeLists.txt  ostream_sink_test.cpp
tests/: CMakeLists.txt  main.cpp  terminal_sink_test.cpp  terminalsink.cpp
